# Smartphone-Comparison

./: .gitignore  README.md  app.py  data_processor.py  pyproject.toml  recommendation_engine.py  requirements.txt  sentiment_analyzer.py  sentiment_cache.pkl  visualization.py
attached_assets/: Pasted-LookupError-Resource-93mpu-1743421463532.txt  Pasted-LookupError-Resource-93mpu-1743421482956.txt  Pasted-TypeError-Invalid-comparison-between-dtype-float64-and-str-Traceback-File-home-runner-workspac-1743421954870.txt  amazon_phones.csv  app.py  cashify_phones.csv  flipkart_phones.csv  recommendation_engine.py  sentiment_analyzer.py  visualization.py
