[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    # Sentiment analysis stack (DistilBERT + TF-IDF)
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "scikit-learn>=1.4.0",
]
